aplication properties + creacion DAO

--- a/EjemploSpringJPAHibernate/src/main/resources/application.properties
+++ b/EjemploSpringJPAHibernate/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Base de datos
+db.driver: com.mysql.jdbc.Driver
+db.url: jdbc:mysql://localhost/hibernate
+db.username: R
+db.password: 12345678
 
+
+# Busqueda de entidades
+entityManager.packagerToScan: com.plexus.hibernate.spring
+
+# Hibernate
+hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: create
