--- a/EjemploSpringJPAHibernate/src/main/resources/application.properties
+++ b/EjemploSpringJPAHibernate/src/main/resources/application.properties
@@ -12,3 +12,5 @@ entityManager.packagerToScan: com.plexus.hibernate.spring
 hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql: true
 hibernate.hbm2ddl.auto: create
+
+server.port: 9002
