Driver parcheado, bug AplicationContext

--- a/EjemploSpringJPAHibernate/src/main/resources/application.properties
+++ b/EjemploSpringJPAHibernate/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Base de datos
-db.driver: com.mysql.jdbc.Driver
+db.driver: com.mysql.cj.jdbc.Driver
 db.url: jdbc:mysql://localhost/hibernate
 db.username: R
 db.password: 12345678
