--- a/EjemploSpringJPAHibernate/src/main/resources/application.properties
+++ b/EjemploSpringJPAHibernate/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # Base de datos
-db.driver: com.mysql.cj.jdbc.Driver
-db.url: jdbc:mysql://localhost/hibernate
-db.username: R
-db.password: 12345678
+db.driver= com.mysql.cj.jdbc.Driver
+db.url= jdbc:mysql://localhost/hibernate?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.username= root
+db.password= rawr2rawr
 
 
 # Busqueda de entidades
-entityManager.packagerToScan: com.plexus.hibernate.spring
+entityManager.packagerToScan=org.plexus.hibernate.spring
 
 # Hibernate
-hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql: true
-hibernate.hbm2ddl.auto: create
+hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.show_sql= true
+hibernate.hbm2ddl.auto= create
 
-server.port: 9002
+server.port=8080
